# py-pkgs-cookiecutter

./: .gitignore  CLAUDE.md  README.md  cookiecutter.json
hooks/: post_gen_project.py
tests/: test_cookiecutter.py
{{ cookiecutter.__package_slug }}/: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml  tox.ini
{{ cookiecutter.__package_slug }}/.build/: Dockerfile  docker-compose.yml
{{ cookiecutter.__package_slug }}/.cursor/rules/: repo-usage.mdc
{{ cookiecutter.__package_slug }}/.github/workflows/: ci-cd.yml  ci.yml
{{ cookiecutter.__package_slug }}/docs/: USAGE.md  example.ipynb  installation.md
{{ cookiecutter.__package_slug }}/scripts/: add_deps.sh  build_docker.sh  setup_env.sh
{{ cookiecutter.__package_slug }}/src/{{ cookiecutter.__package_slug }}/: __init__.py  {{ cookiecutter.__package_slug }}.py
{{ cookiecutter.__package_slug }}/src/{{ cookiecutter.__package_slug }}/application/: task_lists.py  tasks.py
{{ cookiecutter.__package_slug }}/src/{{ cookiecutter.__package_slug }}/domain/entities/: task.py  task_list.py
{{ cookiecutter.__package_slug }}/src/{{ cookiecutter.__package_slug }}/domain/repositories/: task_list_repository.py  task_repository.py
{{ cookiecutter.__package_slug }}/src/{{ cookiecutter.__package_slug }}/domain/services/: task_list_service.py  task_service.py
{{ cookiecutter.__package_slug }}/src/{{ cookiecutter.__package_slug }}/infrastructure/: container.py  settings.py
{{ cookiecutter.__package_slug }}/tests/{{ cookiecutter.__package_slug }}/infrastructure/web/: test_api.py
(+16 files in other folders)
