[tool.poetry]
name = "{{ cookiecutter.__package_slug }}"
version = "{{ cookiecutter.package_version }}"
description = "{{ cookiecutter.package_short_description }}"
authors = ["{{ cookiecutter.author_name }}"]
license = "{{ cookiecutter.open_source_license }}"
packages = [
    { include = "{{ cookiecutter.__package_slug }}", from = "src" },
]

[tool.poetry.dependencies]
python = "{{ cookiecutter.python_version }}"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

####################
# Semantic-release #
####################

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "pip install poetry"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

# [tool.semantic_release.branches.develop]
# match = "develop"
# prerelease = true
# prerelease_token = "dev"

# [tool.semantic_release.branches.staging]
# match = "staging"
# prerelease = true
# prerelease_token = "rc"
